# nvidia-libraries-study

./: .gitignore  README.md
cuda/: README.md
cuda-doc/01_programming_guide/: 01_intro.md  02_programming_model.md  03-03_device_memory.md  03_02_cuda_runtime.md
cuda-study/: 01_heterogeneous_computing.md  02_cuda_programming_model.md  03_organizing_parallel_threads.md  04_device_query.md  05_cuda_execution_model.md  06_understanding_warp_execution.md  07_avoiding_branch_divergence.md  08_unrolling_loops.md  09_cuda_memory_model.md  10-1_matrix_addition_with_unified_memory.md  10_memory_management.md  11-1_matrix_transpose_problem.md  11_memory_access_patterns.md  12-1_data_layout_of_shared_memory.md  12-2_reducing_global_memory_access.md  12_shared_memory.md
cuda/code/perf_sgemm/: CMakeLists.txt
cuda/code/perf_sgemm/src/: CMakeLists.txt  main.cpp
cuda/code/perf_sgemm/src/kernel/: CMakeLists.txt
cuda/code/perf_sgemm/src/kernel/include/: kernels.hpp
cuda/code/perf_sgemm/src/kernel/src/: 00_cublas_gemm.cu  01_naive_gemm.cu  02_smem_gemm.cu  03_1d_blocktiling_gemm.cu  04_2d_blocktiling_gemm.cu  05_vectorize_gemm.cu  06_warptiling_gemm.cu  utils.hpp
cuda/code/perf_sgemm/src/runner/: CMakeLists.txt
cuda/code/perf_sgemm/src/runner/include/: runner.hpp
cuda/code/perf_sgemm/src/runner/src/: runner.cpp  timer.cpp  timer.hpp  utils.hpp
cuda/code/perf_sgemm/src/utils/: CMakeLists.txt
cuda/code/perf_sgemm/src/utils/include/: cuda_utils.hpp
cuda/code/perf_sgemm/src/utils/src/: cuda_utils.cpp  utils.hpp
cuda/study/: 01_heterogeneous_computing.md  02_cuda_programming_model.md  03_organizing_parallel_threads.md  04_device_query.md  06_understanding_warp_execution.md  07_avoiding_branch_divergence.md  08_unrolling_loops.md  09_cuda_memory_model.md  10-1_matrix_addition_with_unified_memory.md  10_memory_management.md  11-1_matrix_transpose_problem.md  11_memory_access_patterns.md  12-1_data_layout_of_shared_memory.md  12-2_reducing_global_memory_access.md  12-3_coalescing_global_memory_accesses.md  12_shared_memory.md  13_constant_memory.md  14-1_concurrent_kernel_execution.md  14-2_overlapping_kernel_execution_and_data_transfer.md  14-3_stream_callback.md  14_introducing_cuda_streams.md  15_introducing_cuda_event.md  16_warp_shuffle.md  17_precision_issues_in_cuda.md  18_difference_between_the_driver_and_runtime_apis.md  19_api_synchronization_behavior.md  20_stream_synchronization_behavior.md  21_overview_of_tensor_cores.md  22_a_layout_of_wmma.md  23_optimizing_a_matmul_kernel.md  24_efficient_gemm_in_cuda.md  25_simple_normalize_vector.md  26_register_cache.md  27_threadblock_swizzling.md  28_ldmatrix.md  29_mma_m16n8k16_fp16.md
cudnn/: README.md
cudnn/study/: 01_logistic_regression.md  02_mnist_cnn(v7).md
tensorrt/: README.md
tensorrt/study/: 01_mnist_cnn_api.md  02_mnist_cnn_onnx.md  03_mnist_cnn_with_dynamic_shapes.md  04_tensorrt_8_5_update.md  05_tensorrt_8_6_update.md  06_plugin.md  07_tensorrt_9_x_update.md  08_tensorrt_10_x_update.md
(+139 files in other folders)
